--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         <div class="new_chat">
             <button><i class="fa-solid fa-plus"></i> New space</button>
         </div>
+        <div class="sidebar">
+            <img src="Images/caleder.jpg" alt="">
+            <img src="Images/bulb.jpg" alt="">
+            <img src="Images/task.jpg" alt="">
+            <img src="Images/people.jpg" alt="">
+        </div>
     </div>
    </main>
    <footer>
