--- a/space.html
+++ b/space.html
@@ -49,7 +49,7 @@
     </div>
    </header>
    <main>
-       <div class="container">
+    <div class="container">
         <div class="upper">
             <div class="big_chat">
                 <div class="big_chat_first">
@@ -87,7 +87,7 @@
         </div>
         <div class="data">
             <div class="text_small">
-                <span>Chat</span>
+                <span id="s_chat">Chat</span>
                 <span>Files</span>
                 <span>Tasks</span>
             </div>
@@ -120,6 +120,12 @@
                 <i class="fa-regular fa-image icon2"></i>
                 <i class="fa-regular fa-paper-plane"></i>
             </div>
+        </div>
+        <div class="sidebar">
+            <img src="Images/caleder.jpg" alt="">
+            <img src="Images/bulb.jpg" alt="">
+            <img src="Images/task.jpg" alt="">
+            <img src="Images/people.jpg" alt="">
         </div>
     </div>
    </main>
