--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         </div>
         <div class="nav_middle">
             <div class="search">
+                <i class="fa-solid fa-bars" onclick=ham()></i>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Search in chat">
+                <img src="profile.jpg" alt="">
             </div>
         </div>
         <div class="nav_end">
@@ -52,9 +54,9 @@
         </div>
         <div class="data">
             <p class="heading_space">spaces</p>
-            <div class="text_small">
+            <div class="s_text_small">
                 <a href="space.html" >
-                    <span id="small_a">A</span><span>Aman</span>
+                    <span id="small_a">A</span><span style="color: black;">Aman</span>
                 </a>
                 <span>Yesterday</span>
             </div>
