--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
    </header>
    <main>
-    <div class="container_main">
+    <div class="main" style="display: flex;">
         <div class="hamburger">
             <div class="chat"><i class="fa-solid fa-caret-right"></i> Chat <i class="fa-solid fa-plus" style="float: right;"></i></div>
             <div class="chat chat_space">
@@ -52,54 +52,58 @@
             <div class="chat_small"><i class="fa-solid fa-gear"></i> Settings</div>
             <div class="chat_small"><i class="fa-solid fa-question"></i> Help and feedback</div>
         </div>
-        <div class="data">
-            <p class="heading_space">spaces</p>
-            <div class="s_text_small">
-                <a href="space.html" >
-                    <span id="small_a">A</span><span style="color: black;">Aman</span>
-                </a>
-                <span>Yesterday</span>
-            </div>
-            <div class="text">
-                <p>Welcome, Aman</p>
-                <p>Ready? Set. Chat! Let's jump right into things.</p>
-            </div>
-            <div class="images">
-                <div class="img">
-                    <img src="Images/pic1.jpg" alt="">
-                    <span>Send a message to a colleague or friend</span>
-                    <button>Start a chat</button>
+        <div class="container_main" style="width: 100%;">
+        
+            <div class="data">
+                <p class="heading_space">spaces</p>
+                <div class="s_text_small">
+                    <a href="space.html" >
+                        <span id="small_a">A</span><span style="color: black;">Aman</span>
+                    </a>
+                    <span>Yesterday</span>
                 </div>
-                <div class="img">
-                    <img src="Images/pic2.jpg" alt="">
-                    <span>Collaborate on projects with teams or groups</span>
-                    <button>Browse spaces</button>
+                <div class="text">
+                    <p>Welcome, Aman</p>
+                    <p>Ready? Set. Chat! Let's jump right into things.</p>
                 </div>
-                <div class="img">
-                    <img src="Images/pic3.jpg" alt="">
-                    <span>Find tools to upgrade your workflows</span>
-                    <button>Explore apps</button>
+                <div class="images">
+                    <div class="img">
+                        <img src="Images/pic1.jpg" alt="">
+                        <span>Send a message to a colleague or friend</span>
+                        <button>Start a chat</button>
+                    </div>
+                    <div class="img">
+                        <img src="Images/pic2.jpg" alt="">
+                        <span>Collaborate on projects with teams or groups</span>
+                        <button>Browse spaces</button>
+                    </div>
+                    <div class="img">
+                        <img src="Images/pic3.jpg" alt="">
+                        <span>Find tools to upgrade your workflows</span>
+                        <button>Explore apps</button>
+                    </div>
+                </div>
+                <div class="section">
+                    <p>Download the chat apps</p>
+                    <div class="links">
+                        <span><i class="fa-brands fa-google-play"></i> Play Store | </span>
+                        <span><i class="fa-brands fa-app-store-ios"></i> App Store | </span>
+                        <span><i class="fa-brands fa-chrome"></i> Web App</span>
+                    </div>
                 </div>
             </div>
-            <div class="section">
-                <p>Download the chat apps</p>
-                <div class="links">
-                    <span><i class="fa-brands fa-google-play"></i> Play Store | </span>
-                    <span><i class="fa-brands fa-app-store-ios"></i> App Store | </span>
-                    <span><i class="fa-brands fa-chrome"></i> Web App</span>
-                </div>
+            <div class="new_chat">
+                <button><i class="fa-solid fa-plus"></i> New space</button>
             </div>
-        </div>
-        <div class="new_chat">
-            <button><i class="fa-solid fa-plus"></i> New space</button>
-        </div>
-        <div class="sidebar">
-            <img src="Images/caleder.jpg" alt="">
-            <img src="Images/bulb.jpg" alt="">
-            <img src="Images/task.jpg" alt="">
-            <img src="Images/people.jpg" alt="">
+            <div class="sidebar">
+                <img src="Images/caleder.jpg" alt="">
+                <img src="Images/bulb.jpg" alt="">
+                <img src="Images/task.jpg" alt="">
+                <img src="Images/people.jpg" alt="">
+            </div>
         </div>
     </div>
+    
    </main>
    <footer>
     <div class="footer">
