--- a/space.html
+++ b/space.html
@@ -50,7 +50,7 @@
       </div>
     </header>
     <main>
-      <div class="main" style="display: flex;">
+      <div class="main" style="display: flex">
         <div class="hamburger">
           <div class="chat">
             <i class="fa-solid fa-caret-right"></i> Chat
@@ -82,7 +82,7 @@
             <i class="fa-solid fa-question"></i> Help and feedback
           </div>
         </div>
-        <div class="container" style="width: 100%;">
+        <div class="container" style="width: 100%">
           <div class="upper">
             <div class="big_chat">
               <div class="big_chat_first">
@@ -134,11 +134,12 @@
               <p><i class="fa-solid fa-clock-rotate-left"></i> HISTORY IS ON</p>
               <span>Messages sent with history on are saved</span>
             </div>
+            <div class="messages"></div>
             <div class="space_search">
               <i class="fa-solid fa-circle-plus"></i>
               <div class="s_search">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="History is on" />
+                <input id="msg" type="text" placeholder="History is on" />
                 <i class="fa-solid fa-a icon1"></i>
                 <i class="fa-regular fa-face-laugh"></i>
                 <i class="fa-regular fa-bookmark icon1"></i>
@@ -146,7 +147,7 @@
                 <i class="fa-solid fa-video icon1"></i>
               </div>
               <i class="fa-regular fa-image icon2"></i>
-              <i class="fa-regular fa-paper-plane"></i>
+              <i onclick="reply()" class="fa-regular fa-paper-plane"></i>
             </div>
           </div>
           <div class="sidebar">
